--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "leaflet-geosearch": "^3.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geocode": "^0.2.1",
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.3"
   },
