--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-leaflet": "^2.7.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "swr": "^0.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
